image overflow fix

--- a/games_yall_site/_sass/_base.scss
+++ b/games_yall_site/_sass/_base.scss
@@ -9,5 +9,5 @@ body {
 }
 
 img {
-    max-width: 100vw;
+    max-width: 100%;
 }
